[gd_scene load_steps=12 format=2]

[ext_resource path="res://interface/themes/General.tres" type="Theme" id=1]
[ext_resource path="res://interface/BattleHUD/BattleHUD.gd" type="Script" id=2]
[ext_resource path="res://interface/BattleHUD/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/BattleHUD/VialHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/BattleHUD/HealthVials.gd" type="Script" id=5]
[ext_resource path="res://interface/BattleHUD/sprites/emblem.png" type="Texture" id=6]
[ext_resource path="res://interface/BattleHUD/sprites/emblem_mask.png" type="Texture" id=7]
[ext_resource path="res://core/utils/KeyLabel.gd" type="Script" id=8]
[ext_resource path="res://interface/BattleHUD/HotbarSlot.tscn" type="PackedScene" id=9]
[ext_resource path="res://interface/dynamic_fonts/Silver_36.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/sprites/weapons/kunai.png" type="Texture" id=11]

[node name="BattleHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = 24.0
margin_top = 8.0
margin_right = 728.0
margin_bottom = 68.0
rect_min_size = Vector2( 380, 60 )
mouse_filter = 2

[node name="ManaBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 608.0
margin_top = 32.0
margin_right = 1108.0
margin_bottom = 72.0
rect_min_size = Vector2( 200, 40 )
mouse_filter = 2

[node name="Overlay" parent="ManaBar" index="0"]
margin_right = 500.0
margin_bottom = 40.0

[node name="TextureProgress" parent="ManaBar/Overlay" index="0"]
mouse_filter = 2

[node name="Counter" parent="ManaBar" index="1"]
margin_bottom = 40.0

[node name="Title" parent="ManaBar/Counter" index="0"]
text = "MP"

[node name="PlayerIcon" type="Control" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 48, 48 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="PlayerIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="PlayerIcon"]
light_mask = 524289
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mask" type="Light2D" parent="PlayerIcon/Icon"]
light_mask = 524288
position = Vector2( 24, 24 )
scale = Vector2( 2, 1.88235 )
texture = ExtResource( 7 )
mode = 3
range_layer_max = 200
range_item_cull_mask = 524288

[node name="CenterTopMessages" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_top = 324.326
margin_right = 400.0
margin_bottom = 392.326
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionNotReady" type="Label" parent="CenterTopMessages"]
margin_right = 800.0
margin_bottom = 18.0
rect_min_size = Vector2( 800, 0 )
text = "Action Not Ready"
align = 1
valign = 1
script = ExtResource( 8 )
key = "action_not_ready"

[node name="Hotbar" type="HBoxContainer" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 313.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotbarSlot1" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 25.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot2" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_right = 58.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot3" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 66.0
margin_right = 91.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot4" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_right = 124.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot5" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_right = 157.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot6" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 165.0
margin_right = 190.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot7" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_right = 223.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot8" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 231.0
margin_right = 256.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HotbarSlot9" parent="Hotbar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_right = 289.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HealthVials" type="VBoxContainer" parent="."]
margin_left = 208.0
margin_top = 8.0
margin_right = 326.0
margin_bottom = 16.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
reference_vial = ExtResource( 4 )

[node name="KunaiContainer" type="Control" parent="."]
margin_left = 200.0
margin_top = 24.0
margin_right = 240.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="KunaiContainer"]
margin_left = -40.0
margin_top = 8.0
margin_right = 24.0
margin_bottom = 72.0
rect_rotation = -46.8
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="KunaiContainer"]
margin_left = 16.0
margin_right = 72.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
text = "0/3"
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="ManaBar"]
